metadata-classic/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Standard</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Acquired</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Unsuccessful</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccountManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AnnualContacts__c</fullName>
        <label>Annual Contacts</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBSA__c</fullName>
        <label>CBSA</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentUserisSalesRep__c</fullName>
        <description>Used to reflect if the current user that is view a list view is the Sales Reps list of Leads. this does not need to be on a page layout</description>
        <formula>IF( $User.Id =  SalesRep__r.Id, &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User is Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Enrollment related to lead</description>
        <label>Enrollment</label>
        <referenceTo>Enrollment__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SalesLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StatusDetails__c</fullName>
        <label>Status Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TimeZone__c</fullName>
        <label>Time Zone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserID__c</fullName>
        <externalId>true</externalId>
        <label>User ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.ANNUAL_REVENUE</columns>
        <columns>Number_of_Attempts__c</columns>
        <columns>UserID__c</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>AnnualContacts__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.EMPLOYEES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CurrentUserisSalesRep__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filters>
        <label>My Leads</label>
    </listViews>
    <listViews>
        <fullName>My_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SystemLevelAccess</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>ManagedAccountLead</fullName>
        <active>true</active>
        <businessProcess>Standard</businessProcess>
        <label>Managed Account Lead</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>